[package]
name = "lctree"
version = "0.3.4"
edition = "2021"
rust-version = "1.63"
description = "Rust implementation of Link-Cut-Tree: self-balancing data structure to maintain a forest of rooted trees."
readme = "README.md"
documentation = "https://docs.rs/lctree"
homepage = "https://github.com/azizkayumov/lctree"
repository = "https://github.com/azizkayumov/lctree"
license = "Apache-2.0"
keywords = ["tree", "dynamic-connectivity"]
categories = ["algorithms", "data-structures"]
authors = ["Kayumov A.I. <kayumovabduaziz@gmail.com>"]
exclude = ["./github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
rand_derive2 = "0.1.21"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
